# extended-tokenizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
extended_tokenizer/: __init__.py  tokenizer.py  trainer.py  vocab.py
extended_tokenizer/data/: __init__.py  preprocessor.py  wikipedia.py
extended_tokenizer/utils/: __init__.py  progress.py
notebooks/: train_tokenizer_colab.ipynb
scripts/: benchmark.py  download_wikipedia.py  train_tokenizer.py
tests/: __init__.py  test_tokenizer.py  test_trainer.py  test_vocab.py
